--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,24 @@ coverage
 awscli
 flake8
 python-dotenv>=0.5.1
+
+
+# General
+numpy
+pandas
+matplotlib
+
+# Document processing
+pdfminer.six
+
+# Machine learning
+scipy
+scikit-learn
+nltk
+sentence-transformers
+
+# GOOGLE Gemini API
+google.ai.generativelanguage
+google-auth-oauthlib
+
+
